--- a/testsuite/default.css
+++ b/testsuite/default.css
@@ -46,7 +46,7 @@ big             { font-size: 1.17em; }
 small, sub, sup { font-size: .83em; }
 sub             { vertical-align: sub; }
 sup             { vertical-align: super; }
-table           { border-spacing: 2px;; }
+table           { border-spacing: 2px; }
 thead, tbody,
 tfoot           { vertical-align: middle; }
 td, th, tr      { vertical-align: inherit; }
